[package]
name = "limiter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
limiter-core = { path = "../limiter-core" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
